[gd_scene load_steps=13 format=3 uid="uid://bm6vbtrqbqx7d"]

[ext_resource type="Script" path="res://systems/collection/collection.gd" id="1_0txvs"]
[ext_resource type="PackedScene" uid="uid://dppjchrp5io0f" path="res://systems/pet/pet.tscn" id="1_lwmpp"]
[ext_resource type="PackedScene" uid="uid://dut2fm7cqngup" path="res://systems/misc/clickable/clickable_tab_item.tscn" id="2_6lgo3"]
[ext_resource type="Script" path="res://universal_scripts/Control.gd" id="2_om1w0"]
[ext_resource type="Script" path="res://systems/collection/show_item_collection.gd" id="3_qopba"]
[ext_resource type="PackedScene" uid="uid://dq5jw5oofwekp" path="res://systems/misc/clickable/change_scene/clickable_change_scene.tscn" id="4_vg3vp"]
[ext_resource type="Texture2D" uid="uid://dm8wxesvh5t8p" path="res://assets/customize/icons.png" id="6_wie7m"]
[ext_resource type="Theme" uid="uid://dent1p17y64cs" path="res://assets/themes/customize_theme.tres" id="8_hh76e"]
[ext_resource type="Texture2D" uid="uid://cnltgiwq825d2" path="res://assets/universal/back_icon.png" id="9_7skf4"]
[ext_resource type="Texture2D" uid="uid://dxm7l6a13fcxw" path="res://assets/customize/shadow.png" id="11_4biyp"]
[ext_resource type="PackedScene" uid="uid://c0wpewocb0isa" path="res://systems/misc/time_limit_checker/time_limit_checker.tscn" id="12_0jmhy"]
[ext_resource type="PackedScene" uid="uid://4ne55yncfru3" path="res://systems/misc/transition_layer/transition_layer.tscn" id="12_rjb6o"]

[node name="Collection" type="Node2D"]
script = ExtResource("1_0txvs")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 540.0
offset_bottom = 960.0
script = ExtResource("2_om1w0")

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.4, 0.894118, 1)

[node name="Picker" type="Control" parent="Control"]
layout_mode = 1
anchor_left = 0.5
anchor_top = 0.229
anchor_right = 0.5
anchor_bottom = 0.229
offset_left = -226.0
offset_top = -177.84
offset_right = 226.0
offset_bottom = 178.16
grow_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Picker"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
offset_left = 9.5
offset_right = 454.5
offset_bottom = 64.0

[node name="Tab_Bodies" parent="Control/Picker/HBoxContainer" instance=ExtResource("2_6lgo3")]
custom_minimum_size = Vector2(80, 64)
layout_mode = 2
theme = ExtResource("8_hh76e")

[node name="Icon" type="Sprite2D" parent="Control/Picker/HBoxContainer/Tab_Bodies"]
position = Vector2(40, 32)
scale = Vector2(3, 3)
texture = ExtResource("6_wie7m")
hframes = 5

[node name="Tab_Eyes" parent="Control/Picker/HBoxContainer" instance=ExtResource("2_6lgo3")]
custom_minimum_size = Vector2(80, 64)
layout_mode = 2
theme = ExtResource("8_hh76e")

[node name="Icon2" type="Sprite2D" parent="Control/Picker/HBoxContainer/Tab_Eyes"]
position = Vector2(40, 32)
scale = Vector2(3, 3)
texture = ExtResource("6_wie7m")
hframes = 5
frame = 1

[node name="Tab_Mouths" parent="Control/Picker/HBoxContainer" instance=ExtResource("2_6lgo3")]
custom_minimum_size = Vector2(80, 64)
layout_mode = 2
theme = ExtResource("8_hh76e")

[node name="Icon3" type="Sprite2D" parent="Control/Picker/HBoxContainer/Tab_Mouths"]
position = Vector2(41, 34)
scale = Vector2(3, 3)
texture = ExtResource("6_wie7m")
hframes = 5
frame = 2

[node name="Tab_Hats" parent="Control/Picker/HBoxContainer" instance=ExtResource("2_6lgo3")]
custom_minimum_size = Vector2(80, 64)
layout_mode = 2
theme = ExtResource("8_hh76e")

[node name="Icon4" type="Sprite2D" parent="Control/Picker/HBoxContainer/Tab_Hats"]
position = Vector2(40, 33)
scale = Vector2(3, 3)
texture = ExtResource("6_wie7m")
hframes = 5
frame = 3

[node name="Tab_Colors" parent="Control/Picker/HBoxContainer" instance=ExtResource("2_6lgo3")]
custom_minimum_size = Vector2(80, 64)
layout_mode = 2
theme = ExtResource("8_hh76e")

[node name="Icon5" type="Sprite2D" parent="Control/Picker/HBoxContainer/Tab_Colors"]
position = Vector2(40, 33)
scale = Vector2(3, 3)
texture = ExtResource("6_wie7m")
hframes = 5
frame = 4

[node name="ScrollContainer" type="ScrollContainer" parent="Control/Picker"]
layout_mode = 2
offset_top = 55.0
offset_right = 452.0
offset_bottom = 355.0
horizontal_scroll_mode = 0
vertical_scroll_mode = 3
metadata/_edit_group_ = true

[node name="ColorRect" type="ColorRect" parent="Control/Picker/ScrollContainer"]
custom_minimum_size = Vector2(451, 620)
layout_mode = 2
mouse_filter = 2
color = Color(0, 0.254902, 0.560784, 1)

[node name="Body_Items" type="GridContainer" parent="Control/Picker/ScrollContainer/ColorRect"]
layout_mode = 0
offset_left = 21.0
offset_top = 18.0
offset_right = 61.0
offset_bottom = 58.0
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 3
script = ExtResource("3_qopba")

[node name="Eyes_Items" type="GridContainer" parent="Control/Picker/ScrollContainer/ColorRect"]
layout_mode = 0
offset_left = 18.0
offset_top = 18.0
offset_right = 58.0
offset_bottom = 58.0
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 3
script = ExtResource("3_qopba")

[node name="Mouth_Items" type="GridContainer" parent="Control/Picker/ScrollContainer/ColorRect"]
layout_mode = 0
offset_left = 21.0
offset_top = 18.0
offset_right = 61.0
offset_bottom = 58.0
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 3
script = ExtResource("3_qopba")

[node name="Hat_Items" type="GridContainer" parent="Control/Picker/ScrollContainer/ColorRect"]
layout_mode = 0
offset_left = 21.0
offset_top = 18.0
offset_right = 61.0
offset_bottom = 58.0
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 3
script = ExtResource("3_qopba")

[node name="Color_Items" type="GridContainer" parent="Control/Picker/ScrollContainer/ColorRect"]
layout_mode = 0
offset_left = 21.0
offset_top = 18.0
offset_right = 61.0
offset_bottom = 58.0
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 3
script = ExtResource("3_qopba")

[node name="Panel" type="Panel" parent="Control/Picker"]
layout_mode = 0
offset_left = -1.0
offset_top = 55.0
offset_right = 451.0
offset_bottom = 356.0
mouse_filter = 2
theme = ExtResource("8_hh76e")

[node name="Main_Hub_Button" parent="Control" instance=ExtResource("4_vg3vp")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.12
anchor_top = 0.866
anchor_right = 0.326
anchor_bottom = 0.907
offset_left = 7.2
offset_top = -19.36
offset_right = -8.04001
offset_bottom = 37.28

[node name="BackIcon" type="Sprite2D" parent="Control/Main_Hub_Button"]
position = Vector2(48, 48)
scale = Vector2(3, 3)
texture = ExtResource("9_7skf4")

[node name="Pet_Control" type="Control" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = 109.0
offset_right = 32.0
offset_bottom = 173.0
grow_horizontal = 2
grow_vertical = 2

[node name="Shadow" type="Sprite2D" parent="Control/Pet_Control"]
position = Vector2(32, 168)
scale = Vector2(3, 3)
texture = ExtResource("11_4biyp")

[node name="Pet" parent="Control/Pet_Control" instance=ExtResource("1_lwmpp")]
position = Vector2(32, 32)

[node name="Transition_Layer" parent="." instance=ExtResource("12_rjb6o")]

[node name="TimeLimitChecker" parent="." instance=ExtResource("12_0jmhy")]
